src/backend/tests/setup.ts
/**
 * Jest test setup file
 * Global test configuration and utilities
 */

// Set test environment variables
process.env.NODE_ENV = 'test';
process.env.LOG_LEVEL = 'error'; // Reduce log noise during tests
process.env.LOG_TO_CONSOLE = 'false';
process.env.LOG_TO_FILE = 'false';

// Mock console methods to reduce noise in test output
global.console = {
  ...console,
  // Uncomment to silence console.log during tests
  // log: jest.fn(),
  // warn: jest.fn(),
  // error: jest.fn(),
  // info: jest.fn(),
  // debug: jest.fn(),
};

// Global test timeout
jest.setTimeout(10000);

// Mock external dependencies
jest.mock('uuid', () => ({
  v4: jest.fn(() => 'test-request-id-12345'),
}));

// Setup and teardown hooks
beforeAll(() => {
  // Global test setup
  console.log('🧪 Starting test suite');
});

afterAll(() => {
  // Global test cleanup
  console.log('✅ Test suite completed');
});

beforeEach(() => {
  // Reset all mocks before each test
  jest.clearAllMocks();
});

afterEach(() => {
  // Cleanup after each test
  jest.restoreAllMocks();
});

// Global test utilities
declare global {
  namespace jest {
    interface Matchers<R> {
      toBeValidYouTubeUrl(): R;
      toBeValidLanguageCode(): R;
      toBeWithinTimeRange(maxMs: number): R;
    }
  }
}

// Custom matchers
expect.extend({
  toBeValidYouTubeUrl(received: string) {
    const youtubeRegex = /^(https?:\/\/)?(www\.)?(youtube\.com\/watch\?v=|youtu\.be\/|youtube\.com\/embed\/)[a-zA-Z0-9_-]{11}(&.*)?$/;
    const pass = youtubeRegex.test(received);

    if (pass) {
      return {
        message: () => `expected ${received} not to be a valid YouTube URL`,
        pass: true,
      };
    } else {
      return {
        message: () => `expected ${received} to be a valid YouTube URL`,
        pass: false,
      };
    }
  },

  toBeValidLanguageCode(received: string) {
    const validCodes = ['zh', 'en', 'ja', 'ko', 'es', 'fr', 'de', 'ru', 'pt', 'it', 'ar', 'hi'];
    const pass = validCodes.includes(received);

    if (pass) {
      return {
        message: () => `expected ${received} not to be a valid language code`,
        pass: true,
      };
    } else {
      return {
        message: () => `expected ${received} to be a valid language code`,
        pass: false,
      };
    }
  },

  toBeWithinTimeRange(received: number, maxMs: number) {
    const pass = received <= maxMs;

    if (pass) {
      return {
        message: () => `expected ${received}ms not to be within ${maxMs}ms`,
        pass: true,
      };
    } else {
      return {
        message: () => `expected ${received}ms to be within ${maxMs}ms`,
        pass: false,
      };
    }
  },
});

// Export test utilities
export const createMockYouTubeVideo = () => ({
  id: 'dQw4w9WgXcQ',
  url: 'https://www.youtube.com/watch?v=dQw4w9WgXcQ',
  title: 'Test Video',
  duration: 212,
  createdAt: new Date(),
  availableSubtitles: [
    {
      language: 'en',
      languageName: 'English',
      isAutoGenerated: false,
      format: 'json3' as const,
    }
  ],
});

export const createMockSubtitleData = () => ({
  videoId: 'dQw4w9WgXcQ',
  language: 'en',
  format: 'json3' as const,
  isAutoGenerated: false,
  filePath: '/test/path/en.json3',
  downloadedAt: new Date(),
  fileSize: 1024,
  content: {
    events: [
      {
        tStartMs: 0,
        dDurationMs: 3000,
        aAppend: 1,
        segs: [{ utf8: 'Hello world' }],
      }
    ],
  },
});

export const createMockProcessedText = () => ({
  videoId: 'dQw4w9WgXcQ',
  sourceLanguage: 'en',
  content: 'Hello world\nThis is a test.',
  wordCount: 6,
  processedAt: new Date(),
  sourceFile: '/test/path/en.json3',
  outputFile: '/test/path/en.txt',
  processingDuration: 1200,
});